syntax = "proto3";

package proto;


message SimpleRequest{
  string data = 1;
}

message SimpleResponse{
  int32 code = 1;
  string value = 2;
}

service Simple{
  rpc GetSimpleInfo(SimpleRequest)returns(SimpleResponse){}
}

